Fixed mobile styling and overflow-x

--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -205,6 +205,12 @@
 
   .navbar--content {
     width: 90vw;
-    margin-right:10 vw;
+    margin: 0;
+    font-size: 0.75rem;
+    gap: 25px;
+  }
+
+  .top--navbar--container {
+    margin-left: 18px;
   }
 }
